Fixing layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -503,10 +503,15 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-  .grid--1x2 {
+  .grid--1x2 .feature__content{
     height:50rem;
     grid-template-columns: repeat(2, 1fr);
   }
+
+  .grid--1x2 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
 }
 
 @media screen and (min-width: 1024px) {
@@ -830,6 +835,7 @@ a {
 .featured--image {
   height: 95%;
   width: 100%;
+  border-radius: 5px;
   object-fit:cover;
 }
 
